# echo

./: .env  .env.example  .gitignore  Echo Assistant.spec  README.md  entitlements.plist  pyproject.toml  test_notifications.py  test_process.py
config/: default.yaml
docs/: index.html
installer/: install.sh
installer/Echo Assistant.app/Contents/: Info.plist
installer/Echo Assistant.app/Contents/Frameworks/: libavdevice.61.3.100.dylib  libtwolame.0.dylib
installer/Echo Assistant.app/Contents/Frameworks/altgraph-0.17.4.dist-info/: RECORD
installer/Echo Assistant.app/Contents/Frameworks/av/.dylibs/: libavfilter.10.4.100.dylib  libvorbis.0.dylib
installer/Echo Assistant.app/Contents/Frameworks/av/__dot__dylibs/: libSvtAv1Enc.2.2.0.dylib  liblzma.5.dylib  libopus.0.dylib  libspeex.1.dylib  (+2 more)
installer/Echo Assistant.app/Contents/Resources/: generated-c568e64fe583d6d72ae6b6423379b883f176c7aad476805631d971c533ad21ec.icns  libopencore-amrwb.0.dylib  libpostproc.58.3.100.dylib  libwebp.7.1.10.dylib  libx264.164.dylib
installer/Echo Assistant.app/Contents/Resources/echo/: main.py
installer/Echo Assistant.app/Contents/Resources/faster_whisper-1.1.1.dist-info/: RECORD
installer/Echo Assistant.app/Contents/Resources/numpy-2.2.3.dist-info/: RECORD
scripts/: build.sh  build_app.py  create_dmg.py  create_installer.py  install.sh  manage.sh  uninstall.sh
service/: com.voiceassistant.plist
src/echo/: gui.py  main.py  voice_assistant.py
src/echo/audio/: recorder.py
src/echo/services/: transcription.py
src/echo/utils/: config.py  input_handler.py  permissions.py
(+7 files in other folders)
